kubernetes/game-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-service
  namespace: lugx-gaming
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game-service
  template:
    metadata:
      labels:
        app: game-service
    spec:
      containers:
      - name: game-service
        image: lugx-game-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: game-service
  namespace: lugx-gaming
spec:
  selector:
    app: game-service
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP
