kubernetes/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: lugx-gaming
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
        - name: init-script
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: postgres-storage
        emptyDir: {}
      - name: init-script
        hostPath:
          path: /home/buddhineth_malshan/lugx-gaming/kubernetes
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: lugx-gaming
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
