kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lugx-ingress
  namespace: lugx-gaming
spec:
  rules:
  - host: lugx-gaming.test
    http:
      paths:
      - path: /games
        pathType: Prefix
        backend:
          service:
            name: game-service
            port:
              number: 3000
      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80

  - host: analytics.lugx.test
    http:
      paths:
      - path: /  # this will also serve /events correctly
        pathType: Prefix
        backend:
          service:
            name: lugx-analytics-service
            port:
              number: 3000
